--- a/plda/PLDA.ipynb
+++ b/plda/PLDA.ipynb
@@ -17,12 +17,12 @@
    "source": [
     "# 1. LDA\n",
     "\n",
-    "\n",
+    "[1]\n",
     "## 1.1 动机\n",
     "\n",
     "确定一个最易区分的低维投影方向\n",
     "![](http://sebastianraschka.com/images/blog/2014/linear-discriminant-analysis/lda_1.png)\n",
-    "**图1. LDA 投影**\n",
+    "**图1. LDA 投影【[src](http://sebastianraschka.com/images/blog/2014/linear-discriminant-analysis/lda_1.png)】**\n",
     "\n",
     "\n",
     "## 1.2 LDA 算法\n",
@@ -288,7 +288,7 @@
     "    * 3.2 聚合计算结果：$R = \\sum_k n_k \\cdot yyt_k$，$T = \\sum_k y_k f_k^T$，$P = \\sum_k\\hat \\Phi_k$，$E =\\sum_k (y_k - m)(y_k - m)^T)$\n",
     "    * 3.3 更新：$\\Phi_w = \\frac{1}{N} (S + R - (T + T^T))$，$\\Phi_b =  \\frac{1}{K}(P + E)$\n",
     "\n",
-    "> 上述算法基本与[2]所列的 two-covariance 算法相同，不过这里我们直接使用全局均值做为 $m$ 的估计。具体公式的差异见正文。\n",
+    "> 上述算法基本与[2]所列的 two-covariance 算法相同，不过这里我们直接使用全局均值做为 $m$ 的估计。具体公式的差异见下文。\n",
     "\n",
     "基于 $\\Phi_w$ 和 $\\Phi_b$ 可以计算出 $\\Psi$ 和 $A^{-1}$。对角化的方法在 5.1 节算法的2、3步已经给出[5]。\n",
     "\n",
@@ -310,10 +310,7 @@
     "\\Psi = \\Lambda_b \\Lambda_w^{-1}\n",
     "$$\n",
     "$$\n",
-    "V = = \\Lambda_w^{1/2} W\n",
-    "$$\n",
-    "$$\n",
-    "A = V^{-T}\n",
+    "V = W \\Lambda_w^{-1/2} \n",
     "$$\n",
     "$$\n",
     "A^{-1} = V^T\n",
@@ -321,219 +318,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "class PLDA(object):\n",
-    "    def __init__(self, type='full'):\n",
-    "        '''\n",
-    "        args:\n",
-    "            type: full or diag\n",
-    "        '''\n",
-    "        self.type = type\n",
-    "        \n",
-    "        if self.type == 'full':\n",
-    "            self.B = None\n",
-    "            self.W = None\n",
-    "            self.mu = None\n",
-    "        elif self.type == 'diag':\n",
-    "            self.V = None\n",
-    "            self.Psi = None\n",
-    "            self.mu = None\n",
-    "            \n",
-    "    def covert(self, target):\n",
-    "        if target == self.type:\n",
-    "            return\n",
-    "        \n",
-    "        if self.type == 'full' and target == 'diag':\n",
-    "            raise RuntimeError('Not Implemented yet!')\n",
-    "        elif self.type == 'diag' and target == 'full':\n",
-    "            raise RuntimeError('Not Implemented yet!')\n",
-    "        else:\n",
-    "            raise RuntimeError('Invalid type convertion!')\n",
-    "            \n",
-    "        self.type = target\n",
-    " \n",
-    "    def compute_log_likelihood(self, data):\n",
-    "        \"\"\"Comute the log likelihood for the whole dataset.\n",
-    "        \n",
-    "        Args:\n",
-    "            data: An array of the shape (number_of_features, number_of_samples).\n",
-    "        \"\"\"\n",
-    "        if self.type == 'full':\n",
-    "            return self._compute_llk_full(data)\n",
-    "        elif self.type == 'diag':\n",
-    "            return self._compute_llk_diag(data)\n",
-    "        \n",
-    "    def _compute_llk_full(self, data):\n",
-    "        d, n = data.shape\n",
-    "\n",
-    "        centered_data = data - self.mu\n",
-    "            \n",
-    "        # Total covariance matrix for the model with integrated out latent \n",
-    "        # variables\n",
-    "        Sigma_tot = self.B + self.W\n",
-    "        \n",
-    "        # Compute log-determinant of the Sigma_tot matrix\n",
-    "        E, _ = np.linalg.eig(Sigma_tot)\n",
-    "        log_det = np.sum(np.log(E))\n",
-    "        \n",
-    "        return -0.5 * (n * d * np.log(2 * np.pi) + n * log_det + \n",
-    "               np.sum(np.dot(centered_data.T, np.linalg.inv(Sigma_tot)) *\n",
-    "               centered_data.T))\n",
-    "    \n",
-    "    def _compute_llk_diag(self, data):\n",
-    "        d, n = data.shape\n",
-    "\n",
-    "        u = np.dot(self.V, data - self.mu)\n",
-    "            \n",
-    "        # Total covariance matrix for the model with integrated out latent \n",
-    "        # variables\n",
-    "        Sigma_tot = self.psi + 1\n",
-    "        \n",
-    "        # Compute log-determinant of the Sigma_tot matrix\n",
-    "        log_det = np.sum(np.log(Sigma_tot))\n",
-    "        \n",
-    "        return -0.5 * (n * d * np.log(2 * np.pi) + n * log_det + \n",
-    "               np.sum(u ** 2 / Sigma_tot[:, np.newaxis]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def train(plda, data):   \n",
-    "    pooled_data, N, K, f, S, mu  = preprocessing(data)\n",
-    "    initialize(plda, N, S, mu) \n",
-    "\n",
-    "    for i in range(training_iterations):\n",
-    "        T, R, P, E = e_step(plda, data, N, f, S)\n",
-    "        m_step(pldabase, T, R, P, E, N, K, S)\n",
-    "        \n",
-    "        # Print current progress\n",
-    "        print_progress(plda, pooled_data, i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def preprocessing(data):\n",
-    "    '''\n",
-    "    '''\n",
-    "    # Sort the speakers by the number of utterances for the faster E-step\n",
-    "    data.sort(key=lambda x: x.shape[1]) \n",
-    "    \n",
-    "    # Pool all the data for the more efficient M-step\n",
-    "    pooled_data = np.hstack(data)\n",
-    "        \n",
-    "    N = pooled_data.shape[1]  # total number of files\n",
-    "    K = len(data)  # number of classes\n",
-    "        \n",
-    "    mu = pooled_data.mean(axis=1)[:, np.newaxis]\n",
-    "        \n",
-    "    # Calc first and second moments\n",
-    "    f = [spk_data.sum(axis=1) for spk_data in data]\n",
-    "    f = np.asarray(f).T\n",
-    "    S = np.dot(pooled_data, pooled_data.T)\n",
-    "    \n",
-    "    return pooled_data, N, K, f, S, mu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def initialize(plda, N, S, mu):\n",
-    "    cov = S / N - np.dot(mu, mu.T)\n",
-    "    \n",
-    "    plda.mu = mu\n",
-    "    plda.B = cov\n",
-    "    plda.W = cov"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def e_step(self, plda, data, N, f, S):\n",
-    "    dim_d = pldabase.dim_d \n",
-    "        \n",
-    "    invB = np.linalg.inv(plda.B)\n",
-    "    invW = np.linalg.inv(plda.W)\n",
-    "    mu = plda.mu\n",
-    "\n",
-    "    # Initialize output matrices\n",
-    "    T = np.zeros((dim_d, dim_d))\n",
-    "    R = np.zeros((dim_d, dim_d))\n",
-    "    P = np.zeros((dim_d, dim_d))\n",
-    "    E = np.zeros((dim_d, dim_d))\n",
-    "        \n",
-    "    # Set auxiliary matrix\n",
-    "    invBmu = np.dot(invB, mu)\n",
-    "\n",
-    "    n_previous = 0  # number of utterances for a previous person\n",
-    "    for i in range(len(data)):\n",
-    "        n = data[i].shape[1]  # number of utterances for a particular person\n",
-    "        if n != n_previous: \n",
-    "            # Update matrix that is dependent on the number of utterances\n",
-    "            Phi = np.linalg.inv(invB + n*invW)\n",
-    "            n_previous = n\n",
-    "            \n",
-    "        gamma_i = np.dot(Phi, invBmu + np.dot(invW, f[:,[i]]))\n",
-    "        Ey_i = np.dot(phi, gamma_i) \n",
-    "        Eyyt_i = Phi + np.dot(Ey_i, Ey_i.T) \n",
-    "        Ey_immu = Ey_i - mu\n",
-    "\n",
-    "        T += np.dot(Ey_i, f[:,[i]].T)\n",
-    "        R += n * Eyyt_i\n",
-    "        P += Phi\n",
-    "        E += np.dot(Ey_immu, Ey_immu.T)\n",
-    "\n",
-    "        return T, R, P, E"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def m_step(self, plda, T, R, P, E, N, K, S):\n",
-    "    plda.B = (P + E) / K\n",
-    "    plda.W = (S - (T + T.T) + R) / N"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这里我们首先通过 EM 算法估计 $m$、$\\Phi_b$ 和 $\\Phi_w$。在基础上，我们可以根据上面的公式计算 $A$ 及 $\\Psi$，从而完成 PLDA 模型的训练。\n",
+    "这里我们首先通过 EM 算法估计 $m$、$\\Phi_b$ 和 $\\Phi_w$。在基础上，我们可以根据上面的公式计算 $A^{-1}$ 及 $\\Psi$，从而完成 PLDA 模型的训练。\n",
     "\n",
     "Kaldi 中基于期望最大化方法（EM）[实现](https://github.com/kaldi-asr/kaldi/blob/master/src/ivector/plda.cc)了 PLDA 的参数($\\Phi_b$ 和 $\\Phi_w$)估计。\n",
-    "文献 [2] （算法2 及附录 B） 给出了估计 $\\Phi_w^{-1}$ 和 $\\Phi_b^{-1}$ 的算法流程，并给出实现[代码](https://sites.google.com/site/fastplda/ )。"
+    "文献 [2] （算法2 及附录 B） 给出了估计 $\\Phi_w$ 和 $\\Phi_b$ 的算法流程，并给出实现[代码](https://sites.google.com/site/fastplda/ )。"
    ]
   },
   {
@@ -651,10 +442,6 @@
     "\\Phi_w =\\frac{1}{n}[S + n\\mathbb{E}[yy^T] - (T + T^T)]\n",
     "$$\n",
     "\n",
-    "> Kadli 的实现使用了如下估计公式：$$\n",
-    "\\Phi_w =\\frac{1}{n-1}[S + n\\mathbb{E}[yy^T] - (T + T^T)]\n",
-    "$$\n",
-    "\n",
     "上面的推导是基于一个类别的数据，如果我们有 $K$ 类，对依赖类别的变量加上相应的下标，则有：\n",
     "$$\n",
     "\\sum_{k=1}^K n_k \\Phi_w = \\sum_{k=1}^K S_k + n_k \\mathbb{E}[y_ky_k^T] - (T_k + T_k^T)\n",
@@ -673,15 +460,7 @@
     "$$\n",
     "$$\n",
     "R_g = \\sum_{k=1}^K  n_k \\mathbb{E}[y_ky_k^T]\n",
-    "$$\n",
-    "\n",
-    "> $相应的，Kalid 中总的更新公式为：$$\n",
-    "\\Phi_w = \\frac{1}{\\sum_k w_k(n_k-1)} S_g + \\frac{1}{\\sum_k w_k(n_k-1)} \\sum_{k=1}^K[n_k \\hat \\Phi_k + n_k (\\mathbb{E}[y] - z_k)(\\mathbb{E}[y] - z_k)^T]\n",
-    "$$\n",
-    "\n",
-    "> 其中，$w_k$ 为第 $k$ 类的权重，默认为 1。\n",
-    "\n",
-    "\n"
+    "$$"
    ]
   },
   {
@@ -750,24 +529,11 @@
     "\\Phi_b =  \\frac{1}{\\sum_{k}w_k}  \\sum_k w_k (\\hat \\Phi_k +(\\mathbb{E}[{y_k}] - m)(\\mathbb{E}[{y_k}] - m)^T)\n",
     "$$\n",
     "\n",
-    "\n",
     "而如果我们使用 $m = \\frac{1}{N} \\sum_k n_k\\mathbb{E}[y_k]$ 估计 $m$，则综合所有类别数据，并按照数据量加权，有[2]：\n",
     "$$\n",
     "\\Phi_b = \\frac{1}{N} R_g - mm^T\n",
     "$$ \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "这个和 Kaldi 中的公式是等价的：\n",
-    "$$\n",
-    "\\mathbb{E}[{y_k}] - m = \\hat \\Phi (\\Phi_w^{-1} f + \\Phi_b^{-1} m) - m = \\hat\\Phi\\Phi_w^{-1} (f - nm + nm) + \\hat\\Phi \\Phi_b^{-1} m - m = n \\hat\\Phi\\Phi_w^{-1} (z - m) + \\hat\\Phi(n\\Phi_w^{-1} + \\Phi_b^{-1})m - m\n",
-    "$$\n",
-    "将 $\\hat \\Phi = (n\\Phi^{-1}_w + \\Phi_b^{-1})^{-1} $ 代如上式：\n",
-    "$$\n",
-    "\\mathbb{E}[{y_k}] - m = n \\hat \\Phi\\Phi_w^{-1} (z - m)\n",
-    "$$"
+    "\n"
    ]
   },
   {
@@ -777,7 +543,7 @@
    },
    "source": [
     "# references\n",
-    "1. LDA [模型分类](). https://en.wikipedia.org/wiki/Linear_discriminant_analysis\n",
+    "1. Hastie et al. [The Elements of Statistical Learning]().\n",
     "2. Sizov et al. [Unifying Probabilistic Linear Discriminant Analysis Variants in Biometric Authentication](http://cs.uef.fi/~sizov/pdf/unifying_PLDA_ssspr2014.pdf).\n",
     "3. Prince & Elder. [Probabilistic Linear Discriminant Analysis for Inferences About Identity](). -- standard PLDA\n",
     "4. Kenny et al. [Bayesian Speaker Verification with Heavy Tailed Priors]().\n",
@@ -789,15 +555,6 @@
     "10. Brummer et al. [EM for Probabilistic LDA](https://ce23b256-a-62cb3a1a-s-sites.googlegroups.com/site/nikobrummer/EMforPLDA.pdf?attachauth=ANoY7crcscfaCA3IqQl-SOmO-MU41YCYXsPkXgoI3yS1ND6EewKJI62_YbtfycbClTO7y49zyO-s8d038nPwwrL0DlTjd5kQPDFDIoAWvQoWnSUNQUxauB78WqO70sbBK73GS0_LXtFFHxyysqoB70Rz70Y5ipRzDyfhqgAxdclS2t5xGHhK6pJoOKc_gIqGZNzt7uAK_Oi6fhmfGm4Vek-3AsJka5F0mQ%3D%3D&attredirects=0).\n",
     "11. Petersen & Petersen. [The Matrix Cookbook](http://www2.imm.dtu.dk/pubdb/views/edoc_download.php/3274/pdf/imm3274.pdf)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
