--- a/plda/PLDA.ipynb
+++ b/plda/PLDA.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PLDA 是一个概率生成模型，最初是为解决人脸识别和验证问题而被提出[3,5]，之后也被广泛应用到声纹识别等模式识别任务中。不同学者都从不同的动机出发，提出了 不尽相同的 PLDA 算法，文献[2] 在统一的框架下比较了三种 PLDA 算法变种（standard[3,6], simplified[4], two-covariance[5,8]），并比较了在说话从识别任务上的差异。\n",
+    "PLDA 是一个概率生成模型，最初是为解决人脸识别和验证问题而被提出[3,5]，之后也被广泛应用到声纹识别等模式识别任务中。不同学者从不同的动机出发，提出了不尽相同的 PLDA 算法，文献[2] 在统一的框架下比较了三种 PLDA 算法变种（standard[3,6], simplified[4], two-covariance[5,8]），并在说话从识别任务上比较了它们的性能差异。\n",
     "\n",
     "本文讨论的 PLDA 主要是基于文献 [5] 中提出的 PLDA（即 two-covariance PLDA），这也是 Kaldi 中采用的算法。\n",
     "\n",
-    "本文 1、2节介绍 LDA 的基础知识及 LDA 与 PLDA 的关联，只对 PLDA 算法感兴趣的读者可以跳过。"
+    "本文 1 节简单介绍 LDA，只对 PLDA 算法感兴趣的读者可以跳过。"
    ]
   },
   {
@@ -17,35 +17,73 @@
    "source": [
     "# 1. LDA\n",
     "\n",
-    "[1]\n",
-    "## 1.1 动机\n",
     "\n",
-    "确定一个最易区分的低维投影方向\n",
-    "![](http://sebastianraschka.com/images/blog/2014/linear-discriminant-analysis/lda_1.png)\n",
-    "**图1. LDA 投影【[src](http://sebastianraschka.com/images/blog/2014/linear-discriminant-analysis/lda_1.png)】**\n",
+    "## 1.1 基本 LDA\n",
     "\n",
-    "\n",
-    "## 1.2 LDA 算法\n",
-    "\n",
-    "http://sebastianraschka.com/Articles/2014_python_lda.html\n",
-    "http://www.cnblogs.com/jerrylead/archive/2011/04/21/2024384.html\n",
-    "\n",
-    "原则：投影后的类内方差最小，类间方差最大\n",
-    "\n",
-    "\n",
-    "优化目标：\n",
+    "线性判别分析（Linear Discriminant Analysis, LDA）[1] 是一种线性分类技术。LDA 假设数据服从高斯分布，并且各类的协方差相同。\n",
+    "如果各类的先验概率为 $\\pi_k$（$\\sum_k \\pi_k = 1$），则各类数据的概率分布为：\n",
     "$$\n",
-    "\\frac{类内方差}{类间方差}\n",
+    "p(x|k) \\sim N(\\mu_k, \\Sigma)\n",
     "$$\n",
     "\n",
-    "拉格朗日乘数法：\n",
+    "观测到数据后，类别的后验为：\n",
     "$$\n",
-    "类内方差 + \\lambda 类间方差\n",
+    "p(k|x) = \\frac{p(x|k)\\pi_k}{p(x)}\n",
+    "$$\n",
+    "为了对数据进行分类，比较后验的似然比：\n",
+    "$$\n",
+    "\\ln \\frac{p(k|x)}{p(l|x)} = \\ln \\frac{p(x|k)}{p(x|l)} + \\ln \\frac{\\pi_k}{\\pi_l} = \\ln \\frac{\\pi_k}{\\pi_l} - \\frac{1}{2} (\\mu_k -  \\mu_l)^T\\Sigma^{-1} (\\mu_k + \\mu_l) + x^T\\Sigma^{-1}(\\mu_k - \\mu_l)\n",
     "$$\n",
     "\n",
+    "由于假设协方差相同，因此似然比是关于输入 $x$ 的线性函数。LDA 用一系列超平面划分数据空间，进而完成分类。图1 示意了LDA 构建的分类决策平面。\n",
     "\n",
-    "广义特征值分解\n",
+    "![](http://www.ucl.ac.uk/~ucfbpve/papers/VermeeschGCubed2006/figures/discriminant.jpg)\n",
+    "**图1. LDA 分类示意【[src](http://www.ucl.ac.uk/~ucfbpve/papers/VermeeschGCubed2006/figures/discriminant.jpg)】**\n",
     "\n",
+    "> 如果允许各类的协方差不同，则决策面是二次的，称为二次判别分析（QDA（Quadratic Discriminant Analysis，QDA）。\n",
+    "\n",
+    "这种基本的 LDA 的参数估计非常简单直接：\n",
+    "1. $\\hat \\pi_k = \\frac{n_k}{N}$，其中 $N = \\sum_{i=1}^K n_i$ \n",
+    "2. $\\hat \\mu_k = \\frac{1}{n_k}\\sum_{i=1}^{n_k} x_{ki}$ \n",
+    "3. $\\hat \\Sigma = \\frac{1}{N-K}  \\sum_{k=1}^K \\sum_{i=1}^{n_k} (x_{ki} - \\hat \\mu_k)(x_{ki} - \\hat \\mu_k)^T$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 降维 LDA\n",
+    "\n",
+    "基本的 LDA 可能并不吸引人。LDA 得到广泛应用的一个重要原因是，它可以用来对数据进行降维。\n",
+    "\n",
+    "![](http://uc-r.github.io/public/images/analytics/discriminant_analysis/LDA.jpg)\n",
+    "**图2. LDA 投影 [src](http://uc-r.github.io/public/images/analytics/discriminant_analysis/LDA.jpg)**\n",
+    "\n",
+    "以两分类为例（图2），如果将数据沿着决策线（超平面）的方向投影，投影（降维）后不影响数据的分类结果，因为，非投影方向的各类的均值和（协）方差相同，并不能为分类提供有效信息。\n",
+    "\n",
+    "一般地，对于 $K$ 个类别的分类问题，对于分类为效的信息集中在 $K-1$ 维的子空间上。即基于 LDA 的假设，数据可以从原来的 $d$ 维降为 $K-1$ 维（假设$K-1 <= d$）。投影方向的计算可以参见[1]第4章。\n",
+    "\n",
+    "## 1.3 类内方差与类间方差\n",
+    "\n",
+    "对于 LDA 降维还有另一种解释，并且不需要假设数据分布服从高斯：**对于原数据 X，寻找一个线性组合 $Z = w^T X$（低维投影），使得 $Z$ 的类间方差与类内方差的比值最大。**\n",
+    "\n",
+    "显然，这样的投影方式使得数据在低维空间最容易区分。为此，我们需要优化瑞利熵（Rayleigh Quotient）[1]。\n",
+    "\n",
+    "$$\n",
+    "w = \\underset{w}{\\mathrm{argmax}} \\frac{w^T S_b w}{w^T S_w w}\n",
+    "$$\n",
+    "等价的\n",
+    "$$\n",
+    "w = \\underset{w}{\\mathrm{argmax}} w^T S_b w\n",
+    "$$\n",
+    "$$\n",
+    "s.t. w^T S_w w = 1\n",
+    "$$\n",
+    "这是一个广义特征值问题。具体地，上式可以用拉格朗日乘数求解，即寻找下式的极值：\n",
+    "$$\n",
+    "w^T S_b w - \\lambda w^T S_w w\n",
+    "$$\n",
+    "求导后得到：\n",
     "$$\n",
     "S_b\\mathbf{w} = \\lambda S_w\\mathbf{w}\n",
     "$$\n",
@@ -54,28 +92,16 @@
     "$$\n",
     "S_w^{-1} S_b\\mathbf{w} = \\lambda \\mathbf{w}\n",
     "$$\n",
-    "即我们只需求解矩阵 $S_w^{-1} S_b$ 的特征向量。矩阵的特征值及特征向量求解是线性代数的基本问题。\n",
-    "\n",
-    "W n x n\n",
-    "每列是一特征向量，按特征值绝对值大小排序，保留最大前 k 个。"
+    "即我们只需求解矩阵 $S_w^{-1} S_b$ 的特征向量，保留特征值最大前 $K-1$ 个特征向量（列向量）即可以得到 $W$（$d$ 行，$K-1$ 列）。 "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. LDA 与 GMM\n",
-    "最大似然估计\n",
-    "证明参见文献 [7] 第三节"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. PLDA\n",
+    "# 2. PLDA\n",
     "\n",
-    "同 LDA 一样，各种 PLDA 都将数据之间的差异分解为类内差异和类间差异，但是从概率的角度进行建模。这里，我们按照 [5] 的思路，介绍 所谓 two-covariance PLDA。\n",
+    "同 LDA 一样，各种 PLDA 都将数据之间的差异分解为类内差异和类间差异，但是从概率的角度进行建模。这里，我们按照 [5] 的思路，介绍所谓 two-covariance PLDA。\n",
     "\n",
     "假设数据 $\\mathbf{x}$ 满足如下概率关系：\n",
     "\n",
@@ -92,7 +118,7 @@
     "这里要求协方差矩阵 $\\Phi_w$ 是**正定**的对称方阵，反映了类间（within-class）的差异； $\\Phi_b$ 是**半正定** 的对称方阵，反映了类间（between-class）的差异。因此，PLDA 建模了数据生成的过程，并且同时 LDA 一样，显式地考虑了类内和类间方差。\n",
     "\n",
     "为了推断时方便，下面推导 PLDA 的一种等价表示。\n",
-    "根据线性代数的基础知识（[定理1](https://wenku.baidu.com/view/59f774ca011ca300a7c39062.html)）， $\\Phi_w$ 和  $\\Phi_b$ 可以同时**合同对角化**（simultaneous  diagonalization by congruence），即存在可逆矩阵 $V$，使得 $V^T\\Phi_bV=\\Psi$（$\\Psi 为对角阵$）且 $V^T\\Phi_wV = I$（$I$ 是单位矩阵）。对角化方法见第 5 节。\n",
+    "根据线性代数的基础知识， $\\Phi_w$ 和  $\\Phi_b$ 可以同时**合同对角化**（simultaneous  diagonalization by congruence），即存在可逆矩阵 $V$，使得 $V^T\\Phi_bV=\\Psi$（$\\Psi$ 为对角阵）且 $V^T\\Phi_wV = I$（$I$ 是单位矩阵）。对角化方法见第 4 节。\n",
     "\n",
     "基于上述说明，PLDA 的等价表述为：\n",
     "$$\n",
@@ -113,10 +139,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. 基于 PLDA 的推断\n",
+    "# 3. 基于 PLDA 的推断\n",
     "对于每一个观测数据 $\\mathbf{x}$ 我们都可以计算对应的 $\\mathbf{u} = A^{-1}(\\mathbf{x} - \\mathbf{m})$。 PLDA 的推断都在投影空间中进行。\n",
     "\n",
-    "给定观一组同类的测数据 $\\mathbf{u}_{1,\\dots,n}$，$\\mathbf{v}$ 的后验概率分布为（参见 5.2.1）：\n",
+    "给定观一组同类的测数据 $\\mathbf{u}_{1,\\dots,n}$，$\\mathbf{v}$ 的后验概率分布为（参见 4.2.1）：\n",
     "$$\n",
     "p(\\mathbf{v}|\\mathbf{u}_{1,\\dots,n}) = \\mathcal{N}(\\mathbf{v}|\\frac{n\\Psi}{n\\Psi + I} \\mathbf{\\bar u}, \\frac{\\Psi}{n\\Psi + I})\n",
     "$$\n",
@@ -201,11 +227,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. PLDA 参数估计\n",
+    "# 4. PLDA 参数估计\n",
     "\n",
     "PLDA 中，我们需要估计的参数包括 $A$、$\\Psi$ 和 $\\mathbf{m}$。\n",
     "\n",
-    "## 5.1 直接求解\n",
+    "## 4.1 直接求解\n",
     "对于 $K$ 类共 $N$ 个训练数据 $(x_1,\\dots,x_N)$。如果每类样本数量相等，都为 $n_k = N / K$，则参数有解析的估计形式 [5]。\n",
     "\n",
     "1. 计算类内 (scatter matrix) $S_w = \\frac{1}{N} \\sum_k\\sum_{i \\in \\mathcal{C}_k} (\\mathbf{x}_i - \\mathbf{m}_k)(\\mathbf{x}_i - \\mathbf{m}_k)^T$ 和 类间 $S_b = \\frac{1}{N}\\sum_kn_k(\\mathbf{m}_k - \\mathbf{m})(\\mathbf{m}_k - \\mathbf{m})^T$。其中，$m_k = \\frac{1}{n_k} \\sum_{i \\in \\mathcal{C}_k} \\mathbf{x}_i$ 为第 $k$ 类样本均值，$m = \\frac{1}{N} \\sum_k\\sum_{i \\in \\mathcal{C}_k} \\mathbf{x}_i$ 为全部样本均值。\n",
@@ -273,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 期望最大化方法（EM）\n",
+    "## 4.2 期望最大化方法（EM）\n",
     "\n",
     "这里先列出算法流程，具体推导见下文：\n",
     "\n",
@@ -285,12 +311,12 @@
     "2. 随机初始化 $\\Phi_w$，$\\Phi_b$，$m$\n",
     "3. 重复如下步骤至到满足终止条件：\n",
     "    * 3.1 对每一个类别，计算： $\\hat \\Phi = (n\\Phi^{-1}_w + \\Phi_b^{-1})^{-1}$, $y = \\hat \\Phi (\\Phi_b^{-1} m + \\Phi_w^{-1} f)$，$yyt = \\hat \\Phi + y y^T$\n",
-    "    * 3.2 聚合计算结果：$R = \\sum_k n_k \\cdot yyt_k$，$T = \\sum_k y_k f_k^T$，$P = \\sum_k\\hat \\Phi_k$，$E =\\sum_k (y_k - m)(y_k - m)^T)$\n",
+    "    * 3.2 聚合计算结果：$R = \\sum_k n_k \\cdot yyt_k$，$T = \\sum_k y_k f_k^T$，$P = \\sum_k\\hat \\Phi_k$，$E =\\sum_k (y_k - m)(y_k - m)^T$\n",
     "    * 3.3 更新：$\\Phi_w = \\frac{1}{N} (S + R - (T + T^T))$，$\\Phi_b =  \\frac{1}{K}(P + E)$\n",
     "\n",
-    "> 上述算法基本与[2]所列的 two-covariance 算法相同，不过这里我们直接使用全局均值做为 $m$ 的估计。具体公式的差异见下文。\n",
+    "> 上述算法基本与[2]所列的 two-covariance 算法相同，不过这里我们直接使用全局均值做为 $m$ 的估计。如果各类别的样本量相同，则两种方法是等价，实现比较见[代码](./plda.py)。具体公式的差异见下文。\n",
     "\n",
-    "基于 $\\Phi_w$ 和 $\\Phi_b$ 可以计算出 $\\Psi$ 和 $A^{-1}$。对角化的方法在 5.1 节算法的2、3步已经给出[5]。\n",
+    "基于 $\\Phi_w$ 和 $\\Phi_b$ 可以计算出 $\\Psi$ 和 $A^{-1}$。对角化的方法在 4.1 节算法的2、3步已经给出[5]。\n",
     "\n",
     "首先，计算 $\\Phi_w^{-1}\\Phi_b$ 的特征向量 $w_{1,\\dots,d}$，每个特征向量为一列，组成矩阵 $W$。则有：\n",
     "$$\n",
@@ -313,7 +339,7 @@
     "V = W \\Lambda_w^{-1/2} \n",
     "$$\n",
     "$$\n",
-    "A^{-1} = V^T\n",
+    "A^{-1} = V^T = \\Lambda_w^{-1/2} W^T\n",
     "$$"
    ]
   },
@@ -331,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2.1 隐变量 $y$ 的后验分布\n",
+    "### 4.2.1 隐变量 $y$ 的后验分布\n",
     "\n",
     "回顾 PLDA 的假设：\n",
     "$$\n",
@@ -384,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2.2 E step\n",
+    "### 4.2.2 E step\n",
     "根据上面的推导有：\n",
     "$$\n",
     "\\hat \\Phi = (n\\Phi^{-1}_w + \\Phi_b^{-1})^{-1} \n",
@@ -408,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2.3  M step for $\\Phi_w$\n",
+    "### 4.2.3  M step for $\\Phi_w$\n",
     "\n",
     "\n",
     "对于参数 $\\Phi_w$，EM 的最大化目标函数为：\n",
@@ -467,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2.4 M step for $\\Phi_b$ 及 $m$\n",
+    "### 4.2.4 M step for $\\Phi_b$ 及 $m$\n",
     "\n",
     "对于参数 $\\Phi_b$ 和 $m$，EM 的最大化目标函数为：\n",
     "$$\n",
@@ -486,7 +512,7 @@
     "\n",
     "**a) $m$ 的估计**\n",
     "\n",
-    "类似于5.2.3，我们有：\n",
+    "类似于4.2.3，我们有：\n",
     "$$\n",
     "\\frac{\\partial}{\\partial m} \\mathbb{E}_{y}[\\ln p(y)] = \\sum_k -m^T \\Phi_b^{-1} + \\mathbb{E}[y]^T\\Phi_b^{-1} \n",
     "$$\n",
@@ -532,8 +558,7 @@
     "而如果我们使用 $m = \\frac{1}{N} \\sum_k n_k\\mathbb{E}[y_k]$ 估计 $m$，则综合所有类别数据，并按照数据量加权，有[2]：\n",
     "$$\n",
     "\\Phi_b = \\frac{1}{N} R_g - mm^T\n",
-    "$$ \n",
-    "\n"
+    "$$"
    ]
   },
   {
@@ -542,14 +567,14 @@
     "collapsed": true
    },
    "source": [
-    "# references\n",
-    "1. Hastie et al. [The Elements of Statistical Learning]().\n",
+    "# References\n",
+    "1. Hastie et al. [The Elements of Statistical Learning](https://web.stanford.edu/~hastie/ElemStatLearn/).\n",
     "2. Sizov et al. [Unifying Probabilistic Linear Discriminant Analysis Variants in Biometric Authentication](http://cs.uef.fi/~sizov/pdf/unifying_PLDA_ssspr2014.pdf).\n",
-    "3. Prince & Elder. [Probabilistic Linear Discriminant Analysis for Inferences About Identity](). -- standard PLDA\n",
-    "4. Kenny et al. [Bayesian Speaker Verification with Heavy Tailed Priors]().\n",
-    "5. Ioffe. [Probabilistic Linear Discriminant Analysis](). -- two-covariance PLDA\n",
-    "6. Shafey et al. [A Scalable Formulation of Probabilistic Linear Discriminant Analysis: Applied to Face Recognition](). -- accelerate standard PLDA\n",
-    "7. Hastie & Tibshirani. [Discriminant Analysis by Gaussaian Mixtures]().\n",
+    "3. Prince & Elder. [Probabilistic Linear Discriminant Analysis for Inferences About Identity](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.97.6491&rep=rep1&type=pdf).\n",
+    "4. Kenny et al. [Bayesian Speaker Verification with Heavy Tailed Priors](http://www.crim.ca/perso/patrick.kenny/kenny_Odyssey2010.pdf).\n",
+    "5. Ioffe. [Probabilistic Linear Discriminant Analysis](https://ravisoji.com/assets/papers/Ioffe2006PLDA.pdf).\n",
+    "6. Shafey et al. [A Scalable Formulation of Probabilistic Linear Discriminant Analysis: Applied to Face Recognition](http://ieeexplore.ieee.org/document/6461886/).\n",
+    "7. Hastie & Tibshirani. [Discriminant Analysis by Gaussaian Mixtures](http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.36.203).\n",
     "8. Brummer & De Villiers et al. [The Speaker Partitioning Problem](https://pdfs.semanticscholar.org/3e49/e2d4b026e6bfe4def3586d8cd9b2a90ee7ed.pdf).\n",
     "9. Jiang et al. [PLDA Modeling in I-vector and Supervector Space for Speaker Verification](https://pdfs.semanticscholar.org/bccb/205ca4069505aefd29fca5b5cdf3db02e3d4.pdf).\n",
     "10. Brummer et al. [EM for Probabilistic LDA](https://ce23b256-a-62cb3a1a-s-sites.googlegroups.com/site/nikobrummer/EMforPLDA.pdf?attachauth=ANoY7crcscfaCA3IqQl-SOmO-MU41YCYXsPkXgoI3yS1ND6EewKJI62_YbtfycbClTO7y49zyO-s8d038nPwwrL0DlTjd5kQPDFDIoAWvQoWnSUNQUxauB78WqO70sbBK73GS0_LXtFFHxyysqoB70Rz70Y5ipRzDyfhqgAxdclS2t5xGHhK6pJoOKc_gIqGZNzt7uAK_Oi6fhmfGm4Vek-3AsJka5F0mQ%3D%3D&attredirects=0).\n",
