--- a/plda/PLDA.ipynb
+++ b/plda/PLDA.ipynb
@@ -57,7 +57,7 @@
     "基本的 LDA 可能并不吸引人。LDA 得到广泛应用的一个重要原因是，它可以用来对数据进行降维。\n",
     "\n",
     "![](http://uc-r.github.io/public/images/analytics/discriminant_analysis/LDA.jpg)\n",
-    "**图2. LDA 投影 [src](http://uc-r.github.io/public/images/analytics/discriminant_analysis/LDA.jpg)**\n",
+    "**图2. LDA 投影【[src](http://uc-r.github.io/public/images/analytics/discriminant_analysis/LDA.jpg)】**\n",
     "\n",
     "以两分类为例（图2），如果将数据沿着决策线（超平面）的方向投影，投影（降维）后不影响数据的分类结果，因为，非投影方向的各类的均值和（协）方差相同，并不能为分类提供有效信息。\n",
     "\n",
@@ -65,7 +65,7 @@
     "\n",
     "## 1.3 类内方差与类间方差\n",
     "\n",
-    "对于 LDA 降维还有另一种解释，并且不需要假设数据分布服从高斯：**对于原数据 X，寻找一个线性组合 $Z = w^T X$（低维投影），使得 $Z$ 的类间方差与类内方差的比值最大。**\n",
+    "对于 LDA 降维还有另一种解释来自 Fisher：**对于原数据 X，寻找一个线性组合 $Z = w^T X$（低维投影），使得 $Z$ 的类间方差与类内方差的比值最大。**\n",
     "\n",
     "显然，这样的投影方式使得数据在低维空间最容易区分。为此，我们需要优化瑞利熵（Rayleigh Quotient）[1]。\n",
     "\n",
@@ -92,7 +92,9 @@
     "$$\n",
     "S_w^{-1} S_b\\mathbf{w} = \\lambda \\mathbf{w}\n",
     "$$\n",
-    "即我们只需求解矩阵 $S_w^{-1} S_b$ 的特征向量，保留特征值最大前 $K-1$ 个特征向量（列向量）即可以得到 $W$（$d$ 行，$K-1$ 列）。 "
+    "即我们只需求解矩阵 $S_w^{-1} S_b$ 的特征向量，保留特征值最大前 $k$（不一定是 $K - 1$）个特征向量（列向量）即可以得到 $W$（$d$ 行，$k$ 列）。 \n",
+    "\n",
+    "类内-类间方差的视角更加通过，首先，它并不需要假设数据分布服从高斯且协方差相同；其次，降维的维度不再依赖类别数目。"
    ]
   },
   {
@@ -191,39 +193,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def llk(probe, gallery, V, spi, m):\n",
-    "    '''return the log likelihood without constant factor\n",
-    "    probe: d\n",
-    "    gallery: d by n\n",
-    "    V; d by d, inv of A\n",
-    "    spi: d\n",
-    "    m: d\n",
-    "    '''\n",
-    "    d = probe.size\n",
-    "    if gallery in None:  # Null\n",
-    "        gallery = np.zeros(d, 1)\n",
-    "    n = gallery.shape[1]\n",
-    "    \n",
-    "    u_p = np.matmul(V, (probe - m))\n",
-    "    u_g = np.matmul(V, (gallery - m[:, np.newaxis]))\n",
-    "    u_g_m = np.mean(u_g, dim=1)\n",
-    "    \n",
-    "    mu = n * psi / (n * psi + 1) * u_g_m\n",
-    "    covar = psi / (n * psi + 1) + 1\n",
-    "    \n",
-    "    ret = -0.5 * np.sum((u_p - mu) ** 2 / covar) -0.5 * np.log(np.sum(covar))\n",
-    "    \n",
-    "    return ret    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -240,59 +209,6 @@
     "4. 如果将维度从原数据的 $d$ 维低到 $d^\\prime$ 维，则保留 $\\Psi$ 的前 $d^\\prime$ 大的对角元素，将其余置为零。在进行推断时，仅使用 $\\mathbf{u} = A^{-1}(\\mathbf{x}-\\mathbf{m})$ 非零对角无素对应的 $d^\\prime$ 个元素。\n",
     "\n",
     "如果各类数据的数量不一致，则上述算法只能求得近似的参数估计。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def plda_estimator(X):\n",
-    "    K = len(X)\n",
-    "    d = X[0].shape[-1]\n",
-    "    nk = [len(x) for x in X]\n",
-    "    N = sum(nk)\n",
-    "    n = N / K\n",
-    "    \n",
-    "    # step 1\n",
-    "    mk = [np.mean(x, 0) for x in X]\n",
-    "    m = np.zeros(d)\n",
-    "    for k in range(K):\n",
-    "        m += mk[k] * nk[k]\n",
-    "    m /= N\n",
-    "    \n",
-    "    sw = np.zeros(d, d)\n",
-    "    for k in range(K):\n",
-    "        for i in range(nk[k]):\n",
-    "            x = X[k][i]\n",
-    "            sw += np.outer(x, x)\n",
-    "    sw /= N\n",
-    "    \n",
-    "    sb = np.zeros(d, d)\n",
-    "    for k in range(K):\n",
-    "        mu = mk[k]\n",
-    "        sb += np.outer(mu, mu) * nk[k]\n",
-    "    sb /= N\n",
-    "    \n",
-    "    # step 2\n",
-    "    ss = np.matmul(np.linalg.inv(sw), sb)\n",
-    "    vals, W = np.linalg.eig(ss)\n",
-    "    \n",
-    "    lambdab = np.matmul(np.matmul(W.T, sb), W)\n",
-    "    lambdaw = np.matmul(np.matmul(W.T, sw), W)\n",
-    "    \n",
-    "    # step 3\n",
-    "    A = np.matmul(np.linalg.inv(W.T), lambdaw ** 0.5)\n",
-    "    \n",
-    "    psi = np.zeros(d)\n",
-    "    for i in range(d):\n",
-    "        psi[i] = ((n - 1) * lambdab[i, i] / lambdaw[i, i] - 1) / n\n",
-    "        psi[i] = max(0, psi[i])\n",
-    "        \n",
-    "    return m, np.linalg.inv(A), psi"
    ]
   },
   {
