give out EM's loss (Q) explicitly

--- a/plda/PLDA.ipynb
+++ b/plda/PLDA.ipynb
@@ -273,6 +273,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EM 算法的[优化目标](https://en.wikipedia.org/wiki/Expectation%E2%80%93maximization_algorithm#Description)为：\n",
+    "$$\n",
+    "Q(\\theta|\\theta^{(t-1)}) = \\mathbb{E}_{y|x,\\theta^{(t-1)}} \\ln p(x, y|\\theta)\n",
+    "$$\n",
+    "因此我们需要知道 $y$ 的后验分布。\n",
+    "\n",
     "### 4.2.1 隐变量 $y$ 的后验分布\n",
     "\n",
     "回顾 PLDA 的假设：\n",
@@ -350,26 +356,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "EM 优化目标可以改写为：\n",
+    "$$\n",
+    "Q(\\theta|\\theta^{(t-1)}) = \\mathbb{E}_{y|x,\\theta^{(t-1)}} \\ln p(x, y|\\theta) = \\mathbb{E}_{y|x,\\theta^{(t-1)}} \\ln p(x|y, \\theta) + \\mathbb{E}_{y|\\theta^{(t-1)}} \\ln p(y|\\theta) \n",
+    "$$\n",
+    "显然，右式第一项只包含参数 $\\Phi_w$，第二项只包含 $\\Phi_b$ 及 $m$。因此，我们可以将优化目标分为独立的两部分。\n",
+    "\n",
+    "\n",
     "### 4.2.3  M step for $\\Phi_w$\n",
     "\n",
     "\n",
     "对于参数 $\\Phi_w$，EM 的最大化目标函数为：\n",
     "$$\n",
-    "Q = \\mathbb{E}_{y}[\\ln p(x)] = \\mathbb{E}_{y}[\\sum_i \\ln p(x_i)]\n",
+    "Q = \\mathbb{E}_{y}[\\ln p(x|y)] = \\mathbb{E}_{y}[\\sum_i \\ln p(x_i|y)]\n",
     "$$\n",
     "\n",
     "对 $x_i$ 有：\n",
     "$$\n",
-    "\\ln p(x_i) = C - 0.5 \\ln|\\Phi_w| - 0.5 (x_i - y)^T \\Phi_w^{-1} (x_i - y) = C - 0.5 \\ln|\\Phi_w| -0.5 x_i^{T} \\Phi_w^{-1} x_i -0.5 y^{T} \\Phi_w^{-1} y + 0.5 x_i^T \\Phi_w^{-1} y + 0.5 y^T \\Phi_w^{-1} x_i\n",
+    "\\ln p(x_i|y) = C - 0.5 \\ln|\\Phi_w| - 0.5 (x_i - y)^T \\Phi_w^{-1} (x_i - y) = C - 0.5 \\ln|\\Phi_w| -0.5 x_i^{T} \\Phi_w^{-1} x_i -0.5 y^{T} \\Phi_w^{-1} y + 0.5 x_i^T \\Phi_w^{-1} y + 0.5 y^T \\Phi_w^{-1} x_i\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\mathbb{E}_{y}[\\ln p(x_i)] = C - 0.5 \\ln|\\Phi_w| -0.5 x_i^{T} \\Phi_w^{-1} x_i -0.5 \\mathrm{tr} (\\mathbb{E}[yy^T] \\Phi_w^{-1}) + 0.5 x_i^T \\Phi_w^{-1} \\mathbb{E}[y] + 0.5 \\mathbb{E}[y]^T \\Phi_w^{-1} x_i\n",
+    "\\mathbb{E}_{y}[\\ln p(x_i|y)] = C - 0.5 \\ln|\\Phi_w| -0.5 x_i^{T} \\Phi_w^{-1} x_i -0.5 \\mathrm{tr} (\\mathbb{E}[yy^T] \\Phi_w^{-1}) + 0.5 x_i^T \\Phi_w^{-1} \\mathbb{E}[y] + 0.5 \\mathbb{E}[y]^T \\Phi_w^{-1} x_i\n",
     "$$\n",
     "\n",
     "利用矩阵求导的知识[11]，并注意到 $\\Phi_w$ 和 $\\mathbb{E}[yy]$ 都是对称矩阵，于是有：\n",
     "$$\n",
-    "\\frac{\\partial}{\\partial \\Phi_w} \\mathbb{E}_{y}[\\ln p(x)] = -0.5 n \\Phi_w^{-1} + 0.5 \\Phi_w^{-1} S \\Phi_w^{-1} + 0.5n \\Phi_w^{-1}\\mathbb{E}[yy]^T\\Phi_w^{-1} - 0.5\\Phi_w^{-1} f \\mathbb{E}[y]^T\\Phi_w^{-1} - 0.5\\Phi_w^{-1}  \\mathbb{E}[y] f^T\\Phi_w^{-1}\n",
+    "\\frac{\\partial}{\\partial \\Phi_w} \\mathbb{E}_{y}[\\ln p(x|y)] = -0.5 n \\Phi_w^{-1} + 0.5 \\Phi_w^{-1} S \\Phi_w^{-1} + 0.5n \\Phi_w^{-1}\\mathbb{E}[yy]^T\\Phi_w^{-1} - 0.5\\Phi_w^{-1} f \\mathbb{E}[y]^T\\Phi_w^{-1} - 0.5\\Phi_w^{-1}  \\mathbb{E}[y] f^T\\Phi_w^{-1}\n",
     "$$\n",
     "\n",
     "其中，$S = \\sum_i x_i x_i^T, f = \\sum_i x_i$。令上式零，求得：\n",
