--- a/plda/PLDA.ipynb
+++ b/plda/PLDA.ipynb
@@ -70,18 +70,18 @@
     "显然，这样的投影方式使得数据在低维空间最容易区分。为此，我们需要优化瑞利熵（Rayleigh Quotient）[1]。\n",
     "\n",
     "$$\n",
-    "w = \\underset{w}{\\mathrm{argmax}} \\frac{w^T S_b w}{w^T S_w w}\n",
+    "\\mathbf{w} = \\underset{\\mathbf{w}}{\\mathrm{argmax}}\\ \\frac{\\mathbf{w}^T S_b \\mathbf{w}}{\\mathbf{w}^T S_w \\mathbf{w}}\n",
     "$$\n",
     "等价的\n",
     "$$\n",
-    "w = \\underset{w}{\\mathrm{argmax}} w^T S_b w\n",
+    "\\mathbf{w} = \\underset{\\mathbf{w}}{\\mathrm{argmax}}\\ \\mathbf{w}^T S_b \\mathbf{w}\n",
     "$$\n",
     "$$\n",
-    "s.t. w^T S_w w = 1\n",
+    "s.t. \\mathbf{w}^T S_w \\mathbf{w} = 1\n",
     "$$\n",
     "这是一个广义特征值问题。具体地，上式可以用拉格朗日乘数求解，即寻找下式的极值：\n",
     "$$\n",
-    "w^T S_b w - \\lambda w^T S_w w\n",
+    "\\mathbf{w}^T S_b \\mathbf{w} - \\lambda (\\mathbf{w}^T S_w \\mathbf{w} - 1)\n",
     "$$\n",
     "求导后得到：\n",
     "$$\n",
